<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:id="@+id/tabLayout">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/CalcResultStyle"
        android:shadowRadius="10"
        android:shadowColor="#00ffff"
        android:text="@string/recognition"
        android:textSize="18sp"
        tools:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_no"
        android:layout_marginTop="255dp"
        android:background="@drawable/button_selector"
        android:id="@+id/button2"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_ok"
        android:background="@drawable/button_selector"
        android:layout_marginTop="255dp"
        android:id="@+id/button3"
        android:layout_alignParentRight="true" />

</RelativeLayout>