<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/button_selector"
            android:padding="@dimen/padding"
            android:text="@string/new_measurement"
            android:textAppearance="@style/CalcResultStyle"
            android:textSize="@dimen/text_size_new_measurement" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll2"
            android:layout_marginTop="0dp"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:padding="@dimen/padding"
                android:text="@string/settings"
                android:textAppearance="@style/CalcResultStyle"
                android:textSize="@dimen/text_size_bottom_buttons" />

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:padding="@dimen/padding"
                android:text="@string/about"
                android:textAppearance="@style/CalcResultStyle"
                android:textSize="@dimen/text_size_bottom_buttons" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llAdView"
            android:layout_marginTop="0dp"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:padding="@dimen/padding"
                android:text="@string/contact"
                android:textAppearance="@style/CalcResultStyle"
                android:textSize="@dimen/text_size_bottom_buttons" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:padding="@dimen/padding"
                android:text="@string/exit"
                android:textAppearance="@style/CalcResultStyle"
                android:textSize="@dimen/text_size_bottom_buttons" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

<!--            <com.google.android.gms.ads.AdView-->
<!--                android:id="@+id/adView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                ads:adSize="BANNER"-->
<!--                ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />-->
            <!--ca-app-pub-6217635329833138/1294433607 moje-->

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>